简单处理登陆页面

--- a/notebook/文本说明.md
+++ b/notebook/文本说明.md
@@ -1,4 +1,4 @@
-## bulid文件
+## bulid
   - index.js webpack配置文件[很少修改]
 ## mock
   - mock数据的文件夹[模拟数据]，实际开发使用的是真接口，
@@ -6,9 +6,21 @@
   - ico图标，静态页面，即静态资源，webpack编译不会编译这个文件，
 ## src 
   - 在此编写代码的地方
-  - api 文件 请求现骨干的文件
-  - assets文件夹 放置共享的静态资源，webpack打包时，会进行编译
-  - components 文件夹，放置非路由组件的
-  - icons文件 放置svg矢量图
+  - api  请求接口的文件
+  - assets 放置共享的静态资源，webpack打包时，会进行编译
+  - components 放置非路由组件
+  - icons 放置svg矢量图
   - layout 放置了组件和混入mixin
-  - router
+  - router 路由文件夹
+  - store 与vuex相关
+  - style 与样式相关
+  - utils request.js是axios二次封装的组件
+  - views 路由组件
+## permission.js
+  - 导航守卫
+## setting.js
+  - 项目配置项文件
+  
+## webpack 相关文件
+  - .env.development 
+  - .env.production
