--- a/notebook/1.处理登陆页面.md
+++ b/notebook/1.处理登陆页面.md
@@ -1,4 +1,18 @@
-# 登陆页面
+## 登陆页面
   从view/login/index/vue入手
-    1. 完成静态组件
-    2. 编写api（换成真实的api
+  1. 完成静态组件
+  2. 编写api（换成真实的api） 
+   ```
+   后台管理系统api接口在线文档
+   http://39.98.123.211:8170/swagger-ui.html
+   http://39.98.123.211:8216/swagger-ui.html
+   ```
+
+  3. 换成真实的接口后，需要处理跨域问题 vue.config.js 可以查阅 [https://www.webpackjs.com/configuration/dev-server/#devserver-proxy]
+  4. 退出按钮，路径：src\layout\components\Navbar.vue
+
+## 商品管理页面
+  1. 路由的搭建
+     1. 第一层路由，即侧边栏统一使用layout组件，子路由使用自己的组件
+     2. meta: { title: '首页', icon: 'dashboard' } 侧边栏标题信息
+  2. 
