上传和修改品牌模块

--- a/notebook/1.页面处理.md
+++ b/notebook/1.页面处理.md
@@ -15,4 +15,7 @@
   1. 路由的搭建
      1. 第一层路由，即侧边栏统一使用layout组件，子路由使用自己的组件
      2. meta: { title: '首页', icon: 'dashboard' } 侧边栏标题信息
-  2. 
+  2. 添加品牌
+     1. 使用element-ui dialog 搭建静态文件
+     2. 编写api src\api\product\tradeMark.js
+     3. 在页面收集数据
