完成商品管理页面

--- a/notebook/1.页面处理.md
+++ b/notebook/1.页面处理.md
@@ -19,3 +19,12 @@
      1. 使用element-ui dialog 搭建静态文件
      2. 编写api src\api\product\tradeMark.js
      3. 在页面收集数据
+  3. 修改品牌
+     1. 将每一行的数据传递给处理函数，需要注意深浅拷贝问题
+     2. 根据tmFrom对象判断是否存在id来判断是修改还是添加品牌
+  4. 表单验证
+     1. 使用element-ui进行验证，from自带验证文件
+     2. 一种使用自定义，一种使用elementUI提供的方式，都可以
+  5. 删除品牌
+     1. 使用elementUI的`MessageBox 弹框`中的`confirm`,可以弹出消息框，确认是否删除
+  6. 
