处理attr页面，平台属性管理

--- a/notebook/1.页面处理.md
+++ b/notebook/1.页面处理.md
@@ -27,4 +27,7 @@
      2. 一种使用自定义，一种使用elementUI提供的方式，都可以
   5. 删除品牌
      1. 使用elementUI的`MessageBox 弹框`中的`confirm`,可以弹出消息框，确认是否删除
-  6. 
+
+## 平台属性管理
+  1. 需要处理三级联动
+     1. 使用form表单
