--- a/notebook/1.页面处理.md
+++ b/notebook/1.页面处理.md
@@ -31,3 +31,8 @@
 ## 平台属性管理
   1. 需要处理三级联动
      1. 使用form表单
+  2. 修改平台属性功能
+  3. 收集平台属性操作
+     1. 属性名臣 属性值列表
+     2. 属性 颜色 大小 重量
+     3. 属性值 红色、粉色  max、min 等
