输入内容的判断和验证

--- a/notebook/1.页面处理.md
+++ b/notebook/1.页面处理.md
@@ -38,3 +38,4 @@
      3. 属性值 红色、粉色  max、min 等
   4. 解决取消按钮数据回显问题 清空原有的数据
   5. 修改属性的操作
+     1. 修改属性名称，查看和修改，需要切换span和input，出现多个属性时，不能在data中申明这个flag，所以在单个标签数据中进行确认
