--- a/notebook/1.页面处理.md
+++ b/notebook/1.页面处理.md
@@ -39,3 +39,9 @@
   4. 解决取消按钮数据回显问题 清空原有的数据
   5. 修改属性的操作
      1. 修改属性名称，查看和修改，需要切换span和input，出现多个属性时，不能在data中申明这个flag，所以在单个标签数据中进行确认
+  6. 自动获取焦点，在切换标签时候，如span切换为input标签时，需要自动聚焦到这个切换出来的input标签，可以使用nextTick配合ref和focus来实现
+  7. 删除属性值的操作
+     1. 点击删除时，需要进行确认，使用popconfirm气泡确认框
+     2. 直接使用popconfirm气泡确认框的config回调不起作用， 是由于elementUI的版本原因导致的问题，vue-element-admin使用的是 `"element-ui": "2.13.2"` 版本
+  8. 添加属性和保存属性的操作
+     1. 
