完成spu列表展示页面，修改|添加spu静态页面

--- a/notebook/1.页面处理.md
+++ b/notebook/1.页面处理.md
@@ -44,4 +44,7 @@
      1. 点击删除时，需要进行确认，使用popconfirm气泡确认框
      2. 直接使用popconfirm气泡确认框的config回调不起作用， 是由于elementUI的版本原因导致的问题，vue-element-admin使用的是 `"element-ui": "2.13.2"` 版本
   8. 添加属性和保存属性的操作
-     1. 
+  9. spu管理内容的切换
+     1.  展示spu列表结构
+         1. 添加|修改spu内容相似  完成静态结构
+         2. 添加sku结构
