spu接口，获取数据

--- a/notebook/1.页面处理.md
+++ b/notebook/1.页面处理.md
@@ -47,4 +47,8 @@
   9. spu管理内容的切换
      1.  展示spu列表结构
          1. 添加|修改spu内容相似  完成静态结构
-         2. 添加sku结构
+          - 修改spu内容需要发送请求，获取原有的数据
+          - SpuForm组件，不能在子组件的mouted中发请求，因为v-show是通过display控制显示，并没有进行卸载
+            - 此处使用ref获取子组件
+         3. 添加sku结构
+   1. 
