展示数据，销售属性展示静态

--- a/notebook/1.页面处理.md
+++ b/notebook/1.页面处理.md
@@ -45,10 +45,48 @@
      2. 直接使用popconfirm气泡确认框的config回调不起作用， 是由于elementUI的版本原因导致的问题，vue-element-admin使用的是 `"element-ui": "2.13.2"` 版本
   8. 添加属性和保存属性的操作
   9. spu管理内容的切换
-     1.  展示spu列表结构
+     1.  示spu列表结构
          1. 添加|修改spu内容相似  完成静态结构
           - 修改spu内容需要发送请求，获取原有的数据
           - SpuForm组件，不能在子组件的mouted中发请求，因为v-show是通过display控制显示，并没有进行卸载
-            - 此处使用ref获取子组件
-         3. 添加sku结构
-   1. 
+            - 此处使用ref获取子组件方法，在点击修改按钮时发起此请求
+         2. 添加sku需要携带的参数
+         ```
+         {
+         "category3Id": 0,
+         "description": "string",
+         "id": 0,
+         "spuImageList": [
+            {
+               "id": 0,
+               "imgName": "string",
+               "imgUrl": "string",
+               "spuId": 0
+            }
+         ],
+         "spuName": "string",
+         "spuSaleAttrList": [
+            {
+               "baseSaleAttrId": 0,
+               "id": 0,
+               "saleAttrName": "string",
+               "spuId": 0,
+               "spuSaleAttrValueList": [
+               {
+                  "baseSaleAttrId": 0,
+                  "id": 0,
+                  "isChecked": "string",
+                  "saleAttrName": "string",
+                  "saleAttrValueName": "string",
+                  "spuId": 0
+               }
+               ]
+            }
+         ],
+         "tmId": 0
+         }
+         ```
+      2.  销售属性的展示
+          1.  展示已有的销售属性
+  10.  照片墙数据收集
+      1. 
