完成spuForm数据请求，修改，差保存上传

--- a/notebook/1.页面处理.md
+++ b/notebook/1.页面处理.md
@@ -88,5 +88,15 @@
          ```
       2.  销售属性的展示
           1.  展示已有的销售属性
-  10.  照片墙数据收集
-      1. 
+  10. 照片墙数据收集
+      1. 放在upload 的onsuccess回调中处理，把filelist放在spuImageList中，其中有一些url、name 是服务器不需要的字段，在保存的过程中进行处理
+  11. 销售属性的添加
+       1.  需要收集的数据 baseSaleAttrId,saleAttrName,spuSaleAttrValueList
+       2.  数据存放位置 spu对象当中 ，因为展示是根据spu对象中的spuSaleAttrList来展示数据
+  12. 新增销售属性值的展示
+      1.  需要新增字段，所以需要使用set方法，从而使set监控到整个数据
+      2.  inputVisible 控制显示button和input inputValue用于收集数据
+  13. 删除销售属性和销售属性值的操作
+      1.  在行内操作，方便使用template中的row数据，对这个对象进行处理
+  14. skuForm表单的保存操作
+      1.  修改和添加spu使用的是同一个
