完成sku修改添加，删除

--- a/notebook/1.页面处理.md
+++ b/notebook/1.页面处理.md
@@ -99,4 +99,8 @@
   13. 删除销售属性和销售属性值的操作
       1.  在行内操作，方便使用template中的row数据，对这个对象进行处理
   14. skuForm表单的保存操作
-      1.  修改和添加spu使用的是同一个
+      1.  修改和添加spu使用的是同一个api，根据数据中是否有id判断
+  15. 添加sku的操作
+      1.  需要发送请求，baseSaleAttrId
+  16. 删除sku的操作
+      1.  需要使用心得api接口
