完成product路由下的功能

--- a/notebook/1.页面处理.md
+++ b/notebook/1.页面处理.md
@@ -105,3 +105,14 @@
   16. 删除sku的操作
       1.  需要使用心得api接口
   17. 查看sku列表的loding效果  element中有loading效果
+
+
+
+
+
+
+## 新增
+   1. 深度选择器
+      1. scoped作用，通过在data属性生成一个哈希值，使当前页面的css样式只对此vue文件起作用
+      2. 使用deep，使当前页面的样式，能够影响子组件件样式，违背了scoped原则
+      3. 原因：每个文件单独使用scoped，造成css样式过多，体积冗余
