--- a/notebook/1.页面处理.md
+++ b/notebook/1.页面处理.md
@@ -116,3 +116,7 @@
       1. scoped作用，通过在data属性生成一个哈希值，使当前页面的css样式只对此vue文件起作用
       2. 使用deep，使当前页面的样式，能够影响子组件件样式，违背了scoped原则
       3. 原因：每个文件单独使用scoped，造成css样式过多，体积冗余
+
+# 权限管理
+   - 用户管理 角色管理 菜单管理 获取、展示和修改数据
+   - 
